<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="dashboardViewModel"
            type="com.hescul.adafruitdb.ui.dashboard.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_led"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#252424"
        android:hapticFeedbackEnabled="false"
        tools:context=".ui.dashboard.LedFragment">

        <TextView
            android:id="@+id/textLed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="100dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/ledBar"
            android:textColor="@color/material_on_primary_emphasis_high_type"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/ledGuidelineTop"
            app:layout_constraintStart_toEndOf="@+id/ledBackButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ledGuidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="73dp"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ledBackButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="54dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/back_description"
            android:drawableEnd="@drawable/ic_back"
            app:layout_constraintBottom_toTopOf="@+id/ledGuidelineTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bulb"
            android:layout_width="262dp"
            android:layout_height="332dp"
            android:contentDescription="@string/led_description"
            android:alpha="@{dashboardViewModel.isConnected() ? 1.0F : 0.3F}"
            android:src="@{!dashboardViewModel.isConnected() ? @drawable/ic_bulb_error : dashboardViewModel.ledStatus.equals(dashboardViewModel.ledStatusOn) ? @drawable/ic_bulb_on : @drawable/ic_bulb_off}"
            app:layout_constraintBottom_toTopOf="@+id/ledTurnOnButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ledGuidelineTop"
            tools:src="@drawable/ic_bulb_on"/>

        <Button
            android:id="@+id/ledTurnOnButton"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:alpha="@{dashboardViewModel.isConnected() &amp;&amp; dashboardViewModel.ledStatus.equals(dashboardViewModel.ledStatusOff) ? 1.0F : 0.3F}"
            android:clickable="@{dashboardViewModel.isConnected() &amp;&amp; dashboardViewModel.ledStatus.equals(dashboardViewModel.ledStatusOff) ? true : false}"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ledTurnOn"
            android:textColor="@color/activeState"
            app:layout_constraintBottom_toTopOf="@+id/ledGuidelineBottom"
            app:layout_constraintEnd_toStartOf="@+id/ledTurnOffButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bulb" />

        <Button
            android:id="@+id/ledTurnOffButton"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:alpha="@{dashboardViewModel.isConnected() &amp;&amp; dashboardViewModel.ledStatus.equals(dashboardViewModel.ledStatusOn) ? 1.0F : 0.3F}"
            android:clickable="@{dashboardViewModel.isConnected() &amp;&amp; dashboardViewModel.ledStatus.equals(dashboardViewModel.ledStatusOn) ? true : false}"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ledTurnOff"
            android:textColor="@color/material_on_primary_emphasis_high_type"
            app:layout_constraintBottom_toTopOf="@+id/ledGuidelineBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ledTurnOnButton"
            app:layout_constraintTop_toBottomOf="@+id/bulb" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ledGuidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="73dp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>